@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 13-01-2004 fixed: [ 1039490 ] Fan speed reset to full speed on exit on 1.6 Xbox
   - 11-01-2004 fixed: LPCM audio from ex. Music Video DVD's would only create static.
   - 11-01-2004 fixed: Button scroller issues on homepage.
   - 11-01-2004 added: Third rendering method using overlays.  Added purely to help find the reason behind the
